api_versioned_docs/version-12.1.2/avalonia/controls/documents/primitives/toolbar/index.mdx
---
title: 'Avalonia.Controls.Documents.Primitives.Toolbar'
hide_title: true
slug: '/avalonia/controls/documents/primitives/toolbar'
uid: 'Avalonia.Controls.Documents.Primitives.Toolbar'
commentId: 'N:Avalonia.Controls.Documents.Primitives.Toolbar'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.RichTextEditor'
assembly: 'Avalonia.Controls.RichTextEditor'
apiKind: 'Namespace'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Documents.Primitives.Toolbar'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">Toolbar Namespace</h1>

<div className="apiref-page__lead">

Namespace `Avalonia.Controls.Documents.Primitives.Toolbar`

</div>

## Types

- [ActionTool](actiontool.mdx) - Base class for toolbar tools that bind to and execute an [Avalonia.Controls.Documents.Primitives.Actions.IEditorAction](xref:Avalonia.Controls.Documents.Primitives.Actions.IEditorAction).
- [AlignmentFlyoutTool](alignmentflyouttool.mdx) - Toolbar tool that exposes text alignment as a button with flyout options.
- [BorderFlyoutTool](borderflyouttool.mdx) - A toolbar tool that provides a flyout for configuring block borders with presets.
- [ButtonTool](buttontool.mdx) - A toolbar tool that renders as a button for one-shot commands.
- [ColorMenuItem](colormenuitem.mdx) - A menu item that auto-populates child items from a color palette,
enabling color selection for property actions such as foreground and
background color.
- [ColorPickerTool](colorpickertool.mdx) - A toolbar tool that renders as a color picker button for color selection.
- [ColorSwatchPalette](colorswatchpalette.mdx) - A lightweight palette control that displays a grid of circular color swatches
with optional Fill / No Fill toggle buttons.
- [ColorSwatchSelectedEventArgs](colorswatchselectedeventargs.mdx) - Event arguments for [Avalonia.Controls.Documents.Primitives.Toolbar.ColorSwatchPalette.ColorSelected](xref:Avalonia.Controls.Documents.Primitives.Toolbar.ColorSwatchPalette.ColorSelected).
- [ColorSwatchTool](colorswatchtool.mdx) - A toolbar tool that opens a lightweight color swatch flyout for quick color selection.
- [ColorTool](colortool.mdx) - Common base for toolbar tools that present an editor color picker UI
(e.g. [Avalonia.Controls.Documents.Primitives.Toolbar.ColorSwatchTool](xref:Avalonia.Controls.Documents.Primitives.Toolbar.ColorSwatchTool), [Avalonia.Controls.Documents.Primitives.Toolbar.ColorPickerTool](xref:Avalonia.Controls.Documents.Primitives.Toolbar.ColorPickerTool)).
- [ComboBoxTool](comboboxtool.mdx) - A toolbar tool that renders as a combo box for property selection.
- [EditorBorderSides](editorbordersides.mdx) - Flags enum for border sides.
- [EditorMenuItem](editormenuitem.mdx) - A menu item that executes an editor action.
- [EditorTool](editortool.mdx) - Base class for any item hostable inside an [Avalonia.Controls.Documents.Primitives.Toolbar.EditorToolbar](xref:Avalonia.Controls.Documents.Primitives.Toolbar.EditorToolbar) or
[Avalonia.Controls.Documents.Primitives.Toolbar.ToolbarGroup](xref:Avalonia.Controls.Documents.Primitives.Toolbar.ToolbarGroup).
- [EditorToolTip](editortooltip.mdx) - A stylable tooltip control for [Avalonia.Controls.Documents.Primitives.Toolbar.EditorTool](xref:Avalonia.Controls.Documents.Primitives.Toolbar.EditorTool) that displays
the action name and an optional keyboard gesture.
- [EditorToolbar](editortoolbar.mdx) - A toolbar that hosts [Avalonia.Controls.Documents.Primitives.Toolbar.EditorTool](xref:Avalonia.Controls.Documents.Primitives.Toolbar.EditorTool) items for a [RichTextEditor](xref:Avalonia.Controls.RichTextEditor).
- [FontFamilyMenuItem](fontfamilymenuitem.mdx) - A menu item that auto-populates child items from the available font
families, rendering each entry in its own typeface.
- [HyperlinkFlyoutTool](hyperlinkflyouttool.mdx) - A toolbar tool that shows a flyout for inserting, editing, and removing hyperlinks.
- [ImageFlyoutTool](imageflyouttool.mdx) - A toolbar tool that shows a flyout for customizing the selected inline image:
display width/height (with an optional aspect-ratio lock and size presets),
a reset-to-original action, and alt text.
- [ImageLinkFlyoutTool](imagelinkflyouttool.mdx) - A toolbar tool that adds, edits, or removes a hyperlink on the selected inline
image.
- [ListToggleTool](listtoggletool.mdx) - A toggle tool for list creation that switches between plain and split mode
based on the current list context.
- [OverflowTool](overflowtool.mdx) - Toolbar tool used to host overflow actions from collapsed groups.
- [PropertyMenuItem](propertymenuitem.mdx) - A menu item that auto-populates child items from a property action's
available values. Use this for overflow representations of property-based
tools such as font family, font size, and color pickers.
- [SeparatorTool](separatortool.mdx) - A visual separator between tool groups in the toolbar.
- [TablePickerTool](tablepickertool.mdx) - Toolbar tool that shows a grid-picker flyout for inserting tables with specific dimensions.
- [TextAlignmentMenuItem](textalignmentmenuitem.mdx) - A menu item that auto-populates child items for text alignment options
(left, center, right, justify) and updates its icon to reflect the
current alignment state.
- [ToggleTool](toggletool.mdx) - A toolbar tool that renders as a toggle button for formatting commands.
- [ToolbarGroup](toolbargroup.mdx) - Represents a visual group of related editor tools inside a toolbar.
</ApiRefPage>

